[gd_scene load_steps=7 format=3 uid="uid://ceyramfufub1e"]

[ext_resource type="PackedScene" uid="uid://dly3s0hauqry1" path="res://scenes/game_world/card_target_selector/card_arc.tscn" id="1_dnal8"]
[ext_resource type="Script" uid="uid://btrsx10lrt8yd" path="res://scenes/game_world/card_target_selector/card_target_selector.gd" id="1_s6vcj"]
[ext_resource type="Texture2D" uid="uid://c4jkt7gymden3" path="res://assets/spritesheets/32x32-hex-tiles.png" id="5_gwqsc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66gff"]
size = Vector2(4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws524"]
atlas = ExtResource("5_gwqsc")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwqsc"]
atlas = ExtResource("5_gwqsc")
region = Rect2(64, 32, 32, 32)

[node name="CardTargetSelector" type="Node2D"]
script = ExtResource("1_s6vcj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_66gff")

[node name="HexIndicator" type="Sprite2D" parent="."]
self_modulate = Color(0.380392, 1, 0.262745, 0.580392)
texture = SubResource("AtlasTexture_ws524")

[node name="CircleIndicator" type="Sprite2D" parent="."]
self_modulate = Color(0.380392, 1, 0.262745, 0.580392)
texture = SubResource("AtlasTexture_gwqsc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="CardArc" parent="CanvasLayer" instance=ExtResource("1_dnal8")]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
